chat: fix members area not showing up due to overflow in the chat area

--- a/discord.user.styl
+++ b/discord.user.styl
@@ -1514,7 +1514,7 @@
     // ? Background should take over the header.
     // TODO: Move to a separate background option perhaps?
     [class*="content-"] > [class*="spacer-"][class*="vertical-"] {
-      overflow: visible;
+      // overflow: visible;
       // Account for the height of the title bar.
       &::before { top: -50px; }
     }
